* Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
* Refactored `opus-primus-header` to reflect class/method changes of Structures and Header

= CSS =
* Added classes to `h2`, `ul`, and `li` elements in `OpusPrimusAuthors::author_details`
* Center content of Post Format: Video posts.

/** ------------------------------------------------------------------------- */
== Version 1.0.4 ==
* Released March 2013

= Code =
* Added 'Breadcrumbs' class
* Fixed problem with wrong loop method call in 'archive.php'
* Moved `breadcrumbs` method from 'Structures' class to 'Breadcrumbs' class
* Removed `hgroup` container from 'opus-primus-header'

= CSS =
* Added Breadcrumbs section
* Code formatting

/** ------------------------------------------------------------------------- */
== Version 1.0.3 ==
* Released February 2013

= Code =
* Changed the MetaBoxes class to TagLines
* Moved TagLines into its own Stanza as another example of the theme extensibility
* Added `breadcrumbs` method to Structures as a precursor to new features in version 1.1

/** ------------------------------------------------------------------------- */
== Version 1.0.2 ==
* Released February 2013

= Code =
* Fix 'search' template bug when a page is returned in the results

= CSS =
* Start "BNS Plugin Integrations" (aka BPI) - BNS Inline Asides

/** ------------------------------------------------------------------------- */
== Version 1.0.1 ==
* Released February 2013

= Code =
* Added 'opus_footer_after' action hook
* Change classes in '404.php' from using underscores to using hyphens
* Created new methods `the_loop_wrapped` and `the_loop_archives_wrapped`
* Modified action hooks to more semantic naming convention: `opus_<section>_<placement>`
* Moved 'opus_body_bottom' action hook to immediately before closing body tag
* Replaced `the_loop` method and surrounding code with `the_loop_wrapped`