@@ -1,128 +1,0 @@
-/**
- * Responsive Layout Stylesheet for Opus Primus
- *
- * @package     OpusPrimus
- * @since       0.1
- *
- * @author      Opus Primus <in.opus.primus@gmail.com>
- * @copyright   Copyright (c) 2012, Opus Primus
- *
- * This file is part of Opus Primus.
- *
- * Opus Primus is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License version 2, as published by the
- * Free Software Foundation.
- *
- * You may NOT assume that you can use any other version of the GPL.
- *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details
- *
- * You should have received a copy of the GNU General Public License along with
- * this program; if not, write to:
- *
- *      Free Software Foundation, Inc.
- *      51 Franklin St, Fifth Floor
- *      Boston, MA  02110-1301  USA
- *
- * The license for this software can also likely be found here:
- * http://www.gnu.org/licenses/gpl-2.0.html
- */
-
-@media only screen
-and ( max-width : 320px ) {
-    /** Layout */
-    body {
-        padding-left: 5px;
-        padding-right: 5px;
-        max-width: 320px;
-    }
-    .the-loop {
-        min-width: 280px;
-    }
-    .two-column .first-sidebar,
-    .two-column .second-sidebar {
-        left: 28%;
-        width: 280px;
-    }
-
-    /** Clean up */
-    select {
-        width: 280px;
-    }
-
-}
-
-@media only screen
-and ( min-width : 321px )
-and ( max-width : 480px ){
-    /** Layout */
-    body {
-        padding-left: 5px;
-        padding-right: 5px;
-        max-width: 480px;
-    }
-    .the-loop {
-        min-width: 440px;
-    }
-    .two-column .first-sidebar,
-    .two-column .second-sidebar {
-        left: 28%;
-        width: 440px;
-    }
-
-    /** Clean up */
-    div.first-sidebar ul li ul,
-    div.second-sidebar ul li ul {
-        margin: 0 0 0 15px;
-    }
-
-}
-
-@media only screen
-and ( min-width : 481px ) {
-
-}
-
-@media only screen
-and ( min-width : 641px ) {
-
-}
-
-@media only screen
-and ( min-width : 801px ) {
-    body {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-}
-
-@media only screen
-and ( min-width : 1025px ) {
-    body {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-}
-
-@media only screen
-and ( min-width : 1301px ) {
-    body {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
-}
-
-@media only screen
-and ( min-width : 1601px ) {
-
-}
-
-@media only screen
-and ( min-width : 1901px ) {
-
-}
